Fixed alignment issue in tables with text overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -205,6 +205,10 @@ th.right {
   width: 10%;
 }
 
+.td-11 {
+  width: 11%;
+}
+
 .td-15 {
   width: 15%;
 }
